--- a/index.html
+++ b/index.html
@@ -96,5 +96,78 @@
         </div>
       </div>
     </header>
+
+    <section>
+      <div
+        class="grid grid-cols-1 md:grid-cols-2 w-full gap-0 max-w-screen-xl mx-auto"
+      >
+        <div class="md:order-2">
+          <img src="images/mobile/image-transform.jpg" alt="" />
+        </div>
+        <div
+          class="flex flex-col items-start justify-center p-10 md:ml-24 md:order-1"
+        >
+          <h2 class="text-desaturatedBlue text-4xl mb-8 md:w-80">
+            Transform your brand
+          </h2>
+          <p class="text-darkGrayishBlue md:w-3/5">
+            We are a full-service creative agency specializing in helping brands
+            grow fast. Engage your clients through compelling visuals that do
+            most of the marketing for you.
+          </p>
+          <a
+            href="#"
+            class="uppercase mt-8 underline decoration-4 decoration-yellow"
+            >Learn more</a
+          >
+        </div>
+        <div class="md:order-3">
+          <img src="images/mobile/image-stand-out.jpg" alt="" />
+        </div>
+        <div
+          class="flex flex-col items-start justify-center p-10 md:ml-24 md:order-4"
+        >
+          <h2 class="text-desaturatedBlue text-4xl mb-8 md:w-80">
+            Stand out to the right audience
+          </h2>
+          <p class="text-darkGrayishBlue">
+            Using a collaborative formula of designers, researchers,
+            photographers, videographers, and copywriters, we’ll build and
+            extend your brand in digital places.
+          </p>
+          <a
+            href="#"
+            class="uppercase mt-8 underline decoration-4 decoration-softRed"
+            >Learn more</a
+          >
+        </div>
+
+        <div class="relative md:order-5">
+          <img src="images/desktop/image-graphic-design.jpg" alt="" />
+          <div
+            class="absolute top-2/3 inset-1/4 text-center md:top-1/2 left-2 lg:top-2/3 lg:inset-1/4"
+          >
+            <h2 class="text-cyan text-3xl">Graphic Design</h2>
+            <p class="text-cyan font-light md:w-96">
+              Great design makes you memorable. We deliver artwork that
+              underscores your brand message and captures potential clients’
+              attention.
+            </p>
+          </div>
+        </div>
+        <div class="relative md:order-6">
+          <img src="images/desktop/image-photography.jpg" alt="" />
+          <div
+            class="absolute top-2/3 inset-1/4 text-center md:top-1/2 left-2 lg:top-2/3 lg:inset-1/4"
+          >
+            <h2 class="text-darkBlue text-3xl">Photography</h2>
+            <p class="text-darkBlue md:w-96">
+              Increase your credibility by getting the most stunning,
+              high-quality photos that improve your business image.
+            </p>
+          </div>
+        </div>
+      </div>
+    </section>
   </body>
 </html>
