--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
   </head>
   <body>
     <header>
-      <div class="container p-5 mx-auto">
+      <div class="container p-5 mx-auto max-w-screen-xl">
         <nav class="relative flex items-center justify-between">
           <img src="images/logo.svg" alt="" />
           <ul class="hidden space-x-6 text-white font-light md:flex">
@@ -102,7 +102,16 @@
         class="grid grid-cols-1 md:grid-cols-2 w-full gap-0 max-w-screen-xl mx-auto"
       >
         <div class="md:order-2">
-          <img src="images/mobile/image-transform.jpg" alt="" />
+          <img
+            src="images/desktop/image-transform.jpg"
+            class="hidden md:block"
+            alt=""
+          />
+          <img
+            src="images/mobile/image-transform.jpg"
+            class="md:hidden"
+            alt=""
+          />
         </div>
         <div
           class="flex flex-col items-start justify-center p-10 md:ml-24 md:order-1"
@@ -117,12 +126,21 @@
           </p>
           <a
             href="#"
-            class="uppercase mt-8 underline decoration-4 decoration-yellow"
+            class="uppercase mt-8 underline decoration-4 decoration-yellow hover:decoration-8"
             >Learn more</a
           >
         </div>
         <div class="md:order-3">
-          <img src="images/mobile/image-stand-out.jpg" alt="" />
+          <img
+            src="images/desktop/image-stand-out.jpg"
+            class="hidden md:block"
+            alt=""
+          />
+          <img
+            src="images/mobile/image-stand-out.jpg"
+            class="md:hidden"
+            alt=""
+          />
         </div>
         <div
           class="flex flex-col items-start justify-center p-10 md:ml-24 md:order-4"
@@ -137,16 +155,23 @@
           </p>
           <a
             href="#"
-            class="uppercase mt-8 underline decoration-4 decoration-softRed"
+            class="uppercase mt-8 underline decoration-4 decoration-softRed hover:decoration-8"
             >Learn more</a
           >
         </div>
 
         <div class="relative md:order-5">
-          <img src="images/desktop/image-graphic-design.jpg" alt="" />
-          <div
-            class="absolute top-2/3 inset-1/4 text-center md:top-1/2 left-2 lg:top-2/3 lg:inset-1/4"
-          >
+          <img
+            src="images/desktop/image-graphic-design.jpg"
+            class="hidden md:block"
+            alt=""
+          />
+          <img
+            src="images/mobile/image-graphic-design.jpg"
+            class="md:hidden"
+            alt=""
+          />
+          <div class="designs">
             <h2 class="text-cyan text-3xl">Graphic Design</h2>
             <p class="text-cyan font-light md:w-96">
               Great design makes you memorable. We deliver artwork that
@@ -156,15 +181,79 @@
           </div>
         </div>
         <div class="relative md:order-6">
-          <img src="images/desktop/image-photography.jpg" alt="" />
-          <div
-            class="absolute top-2/3 inset-1/4 text-center md:top-1/2 left-2 lg:top-2/3 lg:inset-1/4"
-          >
+          <img
+            src="images/desktop/image-photography.jpg"
+            class="hidden md:block"
+            alt=""
+          />
+          <img
+            src="images/mobile/image-photography.jpg"
+            class="md:hidden"
+            alt=""
+          />
+          <div class="designs">
             <h2 class="text-darkBlue text-3xl">Photography</h2>
             <p class="text-darkBlue md:w-96">
               Increase your credibility by getting the most stunning,
               high-quality photos that improve your business image.
             </p>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <section>
+      <div
+        class="container mx-auto max-w-screen-xl p-7 flex flex-col items-center justify-center space-y-7 text-center"
+      >
+        <h2
+          class="uppercase tracking-wider text-2xl text-darkGrayishBlue my-10"
+        >
+          Client testimonials
+        </h2>
+        <!-- Testimonials -->
+        <div class="grid grid-cols-1 gap-7 md:grid-cols-3">
+          <!-- Item 1 -->
+          <div
+            class="col-span-1 space-y-8 flex flex-col items-center text-center"
+          >
+            <img src="images/image-emily.jpg" class="rounded-full" alt="" />
+            <p class="leading-4 text-vDarkGrayishBlue">
+              We put our trust in Sunnyside and they delivered, making sure our
+              needs were met and deadlines were always hit.
+            </p>
+            <div class="grid-title">
+              <h3 class="font-bold text-darkBlue text-22xl">Emily R.</h3>
+              <p class="text-grayishBlue">Marketing Director</p>
+            </div>
+          </div>
+          <!-- Item 2 -->
+          <div
+            class="col-span-1 space-y-8 flex flex-col items-center text-center"
+          >
+            <img src="images/image-thomas.jpg" class="rounded-full" alt="" />
+            <p class="leading-4 text-vDarkGrayishBlue">
+              Sunnyside’s enthusiasm coupled with their keen interest in our
+              brand’s success made it a satisfying and enjoyable experience.
+            </p>
+            <div class="grid-title">
+              <h3 class="font-bold text-darkBlue text-22xl">Emily R.</h3>
+              <p class="text-grayishBlue">Chier Operating Officer</p>
+            </div>
+          </div>
+          <!-- Item 3 -->
+          <div
+            class="col-span-1 space-y-8 flex flex-col items-center text-center"
+          >
+            <img src="images/image-jennie.jpg" class="rounded-full" alt="" />
+            <p class="leading-4 text-vDarkGrayishBlue">
+              Incredible end result! Our sales increased over 400% when we
+              worked with Sunnyside. Highly recommended!
+            </p>
+            <div class="grid-title">
+              <h3 class="font-bold text-darkBlue text-22xl">Emily R.</h3>
+              <p class="text-grayishBlue">Business Owner</p>
+            </div>
           </div>
         </div>
       </div>
