--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@
       </div>
     </section>
 
-    <section>
+    <section class="mb-10 md:mb-20">
       <div
         class="container mx-auto max-w-screen-xl p-7 flex flex-col items-center justify-center space-y-7 text-center"
       >
@@ -255,6 +255,59 @@
               <p class="text-grayishBlue">Business Owner</p>
             </div>
           </div>
+        </div>
+      </div>
+    </section>
+
+    <section>
+      <div class="grid grid-cols-2 md:grid-cols-4">
+        <div>
+          <img
+            src="images/mobile/image-gallery-milkbottles.jpg"
+            class="md:hidden"
+            alt=""
+          />
+          <img
+            src="images/desktop/image-gallery-milkbottles.jpg"
+            alt=""
+            class="hidden md:block"
+          />
+        </div>
+        <div>
+          <img
+            src="images/mobile/image-gallery-orange.jpg.jpg"
+            class="md:hidden"
+            alt=""
+          />
+          <img
+            src="images/desktop/image-gallery-orange.jpg"
+            alt=""
+            class="hidden md:block"
+          />
+        </div>
+        <div>
+          <img
+            src="images/mobile/image-gallery-cone.jpg"
+            class="md:hidden"
+            alt=""
+          />
+          <img
+            src="images/desktop/image-gallery-cone.jpg"
+            alt=""
+            class="hidden md:block"
+          />
+        </div>
+        <div>
+          <img
+            src="images/mobile/image-gallery-sugar-cubes.jpg"
+            class="md:hidden"
+            alt=""
+          />
+          <img
+            src="images/desktop/image-gallery-sugarcubes.jpg"
+            alt=""
+            class="hidden md:block"
+          />
         </div>
       </div>
     </section>
